# timesheets

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-deploy.sh  build-rpi4.sh  package-lock.json  package.json  svelte.config.js  vite.config.ts
.cargo/: config
backend/: Cargo.toml
backend/src/: main.rs  store.rs
backend/src/middlewares/: authenticator.rs  mod.rs
backend/src/routes/: api.rs  mod.rs
homeassistant-package/: .gitignore  Dockerfile.aarch64  apparmor.txt  config.yaml
homeassistant-package/etc/services.d/timesheet-web/: run
patches/: @popperjs+core+2.11.6.patch  @popperjs+core+2.11.8.patch
src/: app.html  app.scss
src/assets/components/: ConfirmDialog.svelte  HoursMinutes.svelte
src/assets/js/: data.ts  fetch.ts  settings.ts  shortcut.js
src/routes/: +layout.svelte  +page.svelte
src/routes/print/: +page.svelte
src/routes/settings/: +page.svelte
