[package]
name = "timesheet-backend"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.27"
tokio-util = "0.7.7"
hyper = { version = "0.14.25", features = ["client", "http1"] }
ical = { version = "0.8.0", features = ["serde-derive"] }
