[package]
name = "timesheet-backend"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.27"
tokio-util = "0.7.7"
ical = { version = "0.8.0", features = ["serde-derive"] }
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "brotli", "deflate"] }
fluvio-jolt = "0.1"
time = { version = "0.3.20", features= ["default", "parsing"] }
rrule = "0.10.0"
chrono = "0.4.24"
