[package]
name = "timesheet-backend"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"

[dependencies]
axum = { version = "0.6", default_features = false, features = ["default", "http2", "headers"] }
tower-http = { version = "0.4", default_features = false, features = ["add-extension", "auth", "catch-panic", "cors", "compression-gzip", "compression-br", "decompression-gzip", "decompression-br", "follow-redirect", "fs", "limit", "normalize-path", "propagate-header", "redirect", "request-id", "sensitive-headers", "set-header", "set-status", "timeout", "util", "validate-request", "trace"] }
tokio = { version = "1", default_features = false, features = ["fs", "net", "macros", "time", "rt", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-util = "0.7"
ical = { version = "0.8.0", features = ["serde-derive"] }
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
time = { version = "0.3", default_features = false, features = ["default", "parsing"] }
rrule = "0.10"
chrono = "0.4"

[profile.release]
strip = true